added and styled team, contact and footer sections

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -10,6 +10,8 @@
     cursor: pointer;
     display: inline-block;
     padding: 10px 30px;
+    color: #fff;
+    background-color: #28a745;
     border: none;
     border-radius: 5px;
 }
