--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,11 @@ img {
     position: fixed;
     top: 0;
     padding: 0 30px;
+    transition: 1s;
+}
+
+.navbar.top {
+    background: transparent;
 }
 
 .navbar a {
